# YoutubeLingo

./: .env.example  .gitignore  CLAUDE.md  PRD.md  PRDv2.md  README.md  main.py  pyproject.toml  test.md
demo/: download.py  env_connect_test.py  reburn_video.py  www.youtube.com_cookies.txt
shadowgen/: chunker.py  config.py  downloader.py  env_loader.py  models.py  pipeline.py  resume.py  subtitle_input.py  subtitles.py  timeline.py  transcriber.py  translator.py  tts.py  utils.py  video_engine.py  youtube_subtitles.py
